--- a/src/Game/FXML/fxml_bottom_menu.fxml
+++ b/src/Game/FXML/fxml_bottom_menu.fxml
@@ -7,11 +7,11 @@
 
 <TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="100.0"
          prefWidth="960.0" tabClosingPolicy="UNAVAILABLE"
-         xmlns="http://javafx.com/javafx/8.0.111" style="-fx-background-color: #4da2a9">
+         xmlns="http://javafx.com/javafx/8.0.111" style="-fx-background-color: #dddddd">
     <tabs>
         <Tab text="Buildings">
             <content>
-                <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="960.0"/>
+                <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="969.2"/>
             </content>
         </Tab>
         <Tab text="Untitled Tab 2">
